syntax = "proto3";
package contextlogic.hello_service.v1alpha1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package = "contextlogic/hello_service/v1alpha1";

message Greet {
    int64 id = 1;
    message Message {
        string msg = 1;
        enum Language{
            UNKNOW_LANGUAGE_TYPE = 0;
            ENGLISH = 1;
            CHINESE = 2;
            FRENCH = 3;
        }
        Language language = 2;
    };
    Message greetMessage = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message Greets {
    repeated Greet greets = 1;
}

message CreateGreetRequest {
    Greet greet = 1;
}

message CreateGreetResponse {
    int64 greetID = 1;
}

message ReadAllGreetsRequest {
}

message ReadAllGreetsResponse {
    Greets greets = 1;
}

message ReadGreetRequest {
    int64 greetID = 1;
}

message ReadGreetResponse {
    Greet greet = 1;
}

message UpdateGreetRequest {
    int64 greetID = 1;
    Greet greet = 2;
}

message UpdateGreetResponse {
    int64 greetID = 1;
}

message DeleteGreetRequest {
    int64 greetID = 1;
}

message DeleteGreetResponse {
    int64 greetID = 1;
}

service Greeter {

    rpc CreateGreet(CreateGreetRequest) returns (CreateGreetResponse){
        option (google.api.http) = {
            post: "/v1/create"
            body: "*"
        };
    }

    rpc ReadAllGreets(ReadAllGreetsRequest) returns (ReadAllGreetsResponse){
        option (google.api.http) = {
            get: "/v1/get"
        };
    }

    rpc ReadGreet(ReadGreetRequest) returns (ReadGreetResponse){
        option (google.api.http) = {
            get: "/v1/get/{greetID}"
        };
    }

    rpc UpdateGreet(UpdateGreetRequest) returns (UpdateGreetResponse) {
        option (google.api.http) = {
            put: "/v1/update/{greetID}"
            body: "*"
        };
    }

    rpc DeleteGreet(DeleteGreetRequest) returns (DeleteGreetResponse) {
        option (google.api.http) = {
            delete: "/v1/delete/{greetID}"
        };
    }

}